--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
 Theme Name: Sharon
-Theme URI: http://www.verticalwebcare.com/
+Theme URI: http://www.tysonchamp.com/
 Author: Tyson
-Desgner: http://www.verticalwebcare.com/
-Author URI: http://www.verticalwebcare.com/
+Desgner: http://www.tysonchamp.com/
+Author URI: http://www.tysonchamp.com/
 Description: This theme is a simple, minimalist theme for ecommerce and blog site.
 Version: 1.0
 License: GNU General Public License
 License URI: license.txt
-Tags: light, white, black, red, flexible-width, custom-menu, featured-images, flexible-header, microformats, post-formats, threaded-comments, resposive, bootstrap, free, tysonchamp
+Tags: custom-menu, featured-images, resposive, bootstrap, custom theme, tysonchamp
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
