--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Sharon
-Theme URI: http://www.tysonchamp.com/
+Theme Name: Theme Name
+Theme URI: https://github.com/tysonchamp/WPT-WireFrame
 Author: Tyson
 Desgner: http://www.tysonchamp.com/
 Author URI: http://www.tysonchamp.com/
@@ -8,7 +8,7 @@ Description: This theme is a simple, minimalist theme for ecommerce and blog sit
 Version: 1.0
 License: GNU General Public License
 License URI: license.txt
-Tags: custom-menu, featured-images, resposive, bootstrap, custom theme, tysonchamp
+Tags: custom-menu, featured-images, resposive, bootstrap, custom theme, tysonchamp, WPT-Wireframe
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
