--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Theme Name
+Theme Name: Sree Shibnath
 Theme URI: https://github.com/tysonchamp/WPT-WireFrame
 Author: Tyson
 Desgner: http://www.tysonchamp.com/
